# advent-of-code-2023

./: Cargo.toml  README.md  flake.nix
src/: day1.rs  day2.rs  day3.rs  day4.rs  lib.rs  macros.rs  main.rs
src/days/: day1.rs
tests/: day3.rs
