[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.1.3"
regex = "1.11.1"

[lib]
name = "aoc"
path = "src/lib.rs"

[[bin]]
name = "day1"
path = "src/bin/day1-bin.rs"
